--- a/resources/cards.html
+++ b/resources/cards.html
@@ -45,54 +45,83 @@
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            <div class="col-1 col-lg-3">
-                <p class="navbar-brand mb-0"><a class="nav-action" href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
+            <!-- Item 1: Link to 'Players' page and game name -->
+            <div class="col-1 col-lg-3 d-none d-md-inline-block">
+                <p class="navbar-brand fix-padding mb-0"><a class="nav-action" href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
                     aria-hidden="true" style="position: relative; top: 3px;"></span></a><span
                     id="gameName" class="d-none d-lg-inline-block">2018-01-03 Regensburg</span></p> <!-- TODO overflow ellipsis for long names -->
             </div>
-            <div class="col-3 col-lg-2">
+            <!-- Item 2: Player -->
+            <div class="col-4 col-md-3 col-lg-2">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <!-- TODO on sm and below, show current player name at top of dropdown -->
-                        <a class="nav-link nav-action dropdown-toggle" href="#" id="navbarPlayerDropdownLabel" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ramses</a>
+                        <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" id="navbarPlayerDropdownLabel" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"><span class="oi oi-person mr-2 d-none d-md-inline-block" aria-hidden="true"></span>Ramses</a>
                         <div class="dropdown-menu" aria-labelledby="navbarPlayerDropdownLabel" id="playerDropdown">
-                            <a class="nav-link" href="#"><span class="oi oi-person mr-2" aria-hidden="true"></span>Ikarus</a>
-                            <a class="nav-link" href="#"><span class="oi oi-person mr-2" aria-hidden="true"></span>John Doe</a>
+                            <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>Ikarus</a>
+                            <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>John Doe</a>
                             <div class="dropdown-divider"></div><!-- TODO show divider only when at least one player above it -->
-                            <a class="nav-link" href="#"><span class="oi oi-people mr-2" aria-hidden="true"></span>Players</a><!-- TODO add game id to link -->
-                            <a class="nav-link" href="index.html"><span class="oi oi-account-logout mr-2" aria-hidden="true"></span>Games</a>
+                            <a class="nav-link" href="#"><span class="oi oi-people mx-2" aria-hidden="true"></span>Players</a><!-- TODO add game id to link -->
+                            <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2" aria-hidden="true"></span>Games</a>
                         </div>
                     </li>
                 </ul>
             </div>
-            <!-- TODO on sm and below, show cards count and score vertically stacked -->
-            <div class="col-2 col-lg-1">
-                <p class="navbar-brand mb-0"><img class="inline-svg mr-2" id="navbarCardsIcon" src="img/cards.svg" alt="">8/11</p>
+            <!-- Item 2: Number of cards [on SMALL and smaller also: points] -->
+            <div class="col-4 col-md-2 col-lg-1">
+                <div class="mb-0 text-nowrap" id="navbarCards">
+                    <img class="inline-svg mr-1" id="navbarCardsIcon" src="img/cards.svg" alt=""><span
+                        class="navbarCurrentNumCards">8</span><span class="text-muted navbarMaxCards">/11</span>
+                </div>
+                <div class="mb-0 text-nowrap d-inline-block d-md-none">
+                    <span class="oi oi-target mr-2" aria-hidden="true"></span><span
+                        class="navbarCurrentPoints">245</span><span class="text-muted navbarPointsTarget">/1300</span>
+                </div>
             </div>
-            <div class="col-2 col-lg-2">
-                <p class="navbar-brand mb-0"><span class="oi oi-target mr-2" aria-hidden="true"></span>245/1300</p>
+            <!-- Item 3: Points -->
+            <div class="col-3 col-md-2 d-none d-md-inline-block">
+                <p class="navbar-brand fix-padding mb-0">
+                    <span class="oi oi-target mr-2" aria-hidden="true"></span><span
+                     class="navbarCurrentPoints">245</span><span class="text-muted navbarPointsTarget">/1300</span>
+                </p>
             </div>
-            <div class="col-1">
-                <p class="navbar-brand nav-action mb-0"><a href="#"><span class="oi oi-random mr-2" aria-hidden="true"></span><span
+            <!-- Item 4: Revise -->
+            <div class="col-1 d-none d-md-inline-block">
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"><span class="oi oi-random mr-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-revise"></span></a></p>
             </div>
+            <!-- Item 5: Filter -->
             <div class="col-1">
-                <p class="navbar-brand nav-action mb-0"><a href="#"><span class="oi oi-eye mr-2" aria-hidden="true"></span><span
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"><span class="oi oi-eye mr-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-filter"></span></a></p>
             </div>
-            <div class="col-1">
-                <p class="navbar-brand nav-action mb-0"><a href="#"><span class="oi oi-check mr-2" aria-hidden="true"></span><span
+            <!-- Item 6: Buy -->
+            <div class="col-2 col-md-1">
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"><span class="oi oi-check mx-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
-            <div class="col-1">
+            <!-- Item 7: Language -->
+            <div class="col-1 d-none d-md-inline-block">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown"
+                        <a class="nav-link fix-padding dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false"></a>
-                        <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
+                    </li>
+                </ul>
+            </div>
+            <!-- Item 8: Menu for small screens -->
+            <div class="col-1 d-inline-block d-md-none">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"><span class="oi oi-menu" aria-hidden="true"></span></a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>Ikarus</a>
+                            <!-- TODO Add items from above which are invisible on small screens -->
+                        </div>
                     </li>
                 </ul>
             </div>
